Fix moodboard alignment issue

--- a/Intiri.Client/src/app/components/moodboard-details/moodboard-details.component.scss
+++ b/Intiri.Client/src/app/components/moodboard-details/moodboard-details.component.scss
@@ -78,7 +78,7 @@ p {
       .bottom-section {
         // background-color: #fc3;
         display: grid;
-        grid-template-columns: 3fr 1fr 3fr;
+        grid-template-columns: 2.67fr 1fr 3fr;
         grid-template-rows: 1fr 1fr;
         column-gap: 15px;
         row-gap: 15px;
